--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.19.6",
+    "npm": "10.9.4",
+    "pnpm": "9.15.9"
   }
 }
