--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dennis-portfolio",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.15.9",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,7 +26,6 @@
   },
   "volta": {
     "node": "20.19.6",
-    "npm": "10.9.4",
     "pnpm": "9.15.9"
   }
 }
